[package]
name = "rustbook_ch14_02"
version = "0.0.1"
edition = "2021"
description = "rustbook chapter 14 02 about cargo"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"

[profile.dev]
opt-level = 1
